--- a/TestKVC_CoreData/ViewController.xib
+++ b/TestKVC_CoreData/ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
+                <outlet property="tableView" destination="HCe-Wk-b9a" id="ELc-IU-DdF"/>
                 <outlet property="view" destination="iN0-l3-epB" id="gs1-Vf-zV7"/>
             </connections>
         </placeholder>
@@ -15,29 +16,22 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UG2-7x-fu4">
-                    <rect key="frame" x="106" y="213" width="82" height="30"/>
-                    <state key="normal" title="next control"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HCe-Wk-b9a">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <action selector="nextBtn:" destination="-1" eventType="touchUpInside" id="Rwa-Dg-6ZO"/>
+                        <outlet property="dataSource" destination="-1" id="loa-pb-bkG"/>
+                        <outlet property="delegate" destination="-1" id="1j1-Ex-oiQ"/>
                     </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RF6-Z6-nEv">
-                    <rect key="frame" x="106" y="277" width="109" height="30"/>
-                    <state key="normal" title="study ScollView"/>
-                    <connections>
-                        <action selector="studyScrollView:" destination="-1" eventType="touchUpInside" id="YC3-Zx-Cyl"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cC1-cL-rXq">
-                    <rect key="frame" x="104" y="328" width="112" height="30"/>
-                    <state key="normal" title="study TableView"/>
-                    <connections>
-                        <action selector="studyTableView:" destination="-1" eventType="touchUpInside" id="1EI-4W-Vuv"/>
-                    </connections>
-                </button>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="HCe-Wk-b9a" secondAttribute="trailing" id="CEx-KL-JlR"/>
+                <constraint firstItem="HCe-Wk-b9a" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="FTX-wl-AXU"/>
+                <constraint firstAttribute="bottom" secondItem="HCe-Wk-b9a" secondAttribute="bottom" id="LQx-T0-Dpt"/>
+                <constraint firstItem="HCe-Wk-b9a" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="tLg-um-2EB"/>
+            </constraints>
             <point key="canvasLocation" x="353" y="308"/>
         </view>
     </objects>
